--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Heading</h1>
+    <header>
+      <nav>
+          <ul class="navigate">
+              <li>new</li>
+              <li>past</li>
+              <li>comments</li>
+              <li>ask</li>
+              <li>show</li>
+              <li>jobs</li>
+              <li>submit</li>
+          </ul>
+      </nav>
+      <div class="login">
+          <a>login</a>
+      </div>
+    </header>
     <script src="index.js"></script>
   </body>
 </html>
