--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header>
       <nav>
           <ul class="navigate">
-              <li>new</li>
-              <li>past</li>
-              <li>comments</li>
-              <li>ask</li>
-              <li>show</li>
-              <li>jobs</li>
-              <li>submit</li>
+              <li>new | </li>
+              <li>past | </li>
+              <li>comments |</li>
+              <li>ask |</li>
+              <li>show |</li>
+              <li>jobs |</li>
+              <li>submit | </li>
           </ul>
       </nav>
       <div class="login">
