--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <li>ask |</li>
               <li>show |</li>
               <li>jobs |</li>
-              <li>submit | </li>
+              <li>submit </li>
           </ul>
           <div class="login">
             <a>login</a>
