--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <header>
       <nav>
+          <h1> Hacker News </h1>
           <ul class="navigate">
               <li>new  |</li>
               <li>past  |</li>
