testing the table aspect

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         </div>
       </nav>
     </header>
+    <ul class="news"> 
+      <li>
+        <span class="title">An Airfoil</span>
+        <span class="url">(ciechanow.ski)</span>
+      </li>
+    </ul>
     <script src="index.js"></script>
   </body>
 </html>
