--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>Challenge5</title>
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
     <header>
       <nav>
+          <h1> Hacker News </h1>
           <ul class="navigate">
-            <h1> Hacker News </h1>
             <li>new  |</li>
             <li>past  |</li>
             <li>comments  |</li>
