--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
     </header>
     <ul class="news"> 
       <li>
+        <span class="num"> 1. </span>
         <span class="title">An Airfoil</span>
         <span class="url">(ciechanow.ski)</span>
+      </li>
+      <li>
+        <span class="title">Amazon Lobbyists to be banned from European Parliament </span>
+        <span class="url">(uni-europea.org)</span>
       </li>
     </ul>
     <script src="index.js"></script>
