--- a/index.html
+++ b/index.html
@@ -30,10 +30,121 @@
         <span class="num"> 1. </span>
         <span class="title">An Airfoil</span>
         <span class="url">(ciechanow.ski)</span>
+        <span class="text">1148 points by xusernamex 4 hours ago | hide | 115 comments</span>
       </li>
       <li>
+        <span class="num"> 2. </span>
         <span class="title">Amazon Lobbyists to be banned from European Parliament </span>
         <span class="url">(uni-europea.org)</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 3. </span>
+        <span class="title"> SuperTux </span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">61 points by xusernamex 1 hour ago | hide | 13 comments</span>
+      </li>
+      <li>
+        <span class="num"> 4. </span>
+        <span class="title"> Pure Programming Language </span>
+        <span class="url">(agraef.github.io)</span>
+        <span class="text">56 points by xusernamex 2 hours ago | hide | 4 comments</span>
+      </li>
+      <li>
+        <span class="num"> 5. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(the-engi-nerd.github.io)</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 6. </span>
+        <span class="title"> Ant Geopolitics</span>
+        <span class="url">(github.com(supertux))</span>
+        <<span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 7. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 8. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 9. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 10. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 11. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 12. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 13. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 14. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 15. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 16. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 17. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 18. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 19. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+      </li>
+      <li>
+        <span class="num"> 20. </span>
+        <span class="title"> Testing the F-35C Tailhook</span>
+        <span class="url">(github.com(supertux))</span>
+        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
       </li>
     </ul>
     <script src="index.js"></script>
