--- a/index.html
+++ b/index.html
@@ -54,97 +54,97 @@
         <span class="num"> 5. </span>
         <span class="title"> Testing the F-35C Tailhook</span>
         <span class="url">(the-engi-nerd.github.io)</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="text">239 points by xusernamex 5 hours ago | hide | 101 comments</span>
       </li>
       <li>
         <span class="num"> 6. </span>
         <span class="title"> Ant Geopolitics</span>
-        <span class="url">(github.com(supertux))</span>
-        <<span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="url">(aeon.com)</span>
+        <<span class="text">196 points by xusernamex 7 hours ago | hide | 61 comments</span>
       </li>
       <li>
         <span class="num"> 7. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title">Tersio (YC S15) Is Hiring a Head of Infrastructure (100% Remote)</span>
+        <span class="url">(tesorio.com)</span>
+        <span class="text">21 minutes ago | hide</span>
       </li>
       <li>
         <span class="num"> 8. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> The /unblock API from Browserless: dodging bot detection as a service</span>
+        <span class="url">(browserless.io)</span>
+        <span class="text">75 points by xusernamex 3 hours ago | hide | 65 comments</span>
       </li>
       <li>
         <span class="num"> 9. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> I turned my open-source project into a full-time business</span>
+        <span class="url">(emailengine.app)</span>
+        <span class="text">472 points by xusernamex 3 hours ago | hide | 185 comments</span>
       </li>
       <li>
         <span class="num"> 10. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> SpaceX discloses cause of Starship anomilies as it clears an FAA hurdle</span>
+        <span class="url">(arstechnia.com)</span>
+        <span class="text">164 points by xusernamex 8 hours ago | hide | 65 comments</span>
       </li>
       <li>
         <span class="num"> 11. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> Blazer: Business intelligence made simple</span>
+        <span class="url">(github.com/ankane)</span>
+        <span class="text">124 points by xusernamex 7 hours ago | hide | 21 comments</span>
       </li>
       <li>
         <span class="num"> 12. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> Apple cancels work on electric car, shifts team to generative Ai</span>
+        <span class="url">(bloomberg.com)</span>
+        <span class="text">405 points by xusernamex 2 hours ago | hide | 416 comments</span>
       </li>
       <li>
         <span class="num"> 13. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> Synthetic data generation for tabular data</span>
+        <span class="url">(github.com/sdv-dev)</span>
+        <span class="text">20 points by xusernamex 2 hours ago | hide | 1 comment</span>
       </li>
       <li>
         <span class="num"> 14. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> Show HN: Mountaineer - Webapps in Python and React</span>
+        <span class="url">(github.com/piercefreeman)</span>
+        <span class="text">82 points by xusernamex 6 hours ago | hide | 33 comments</span>
       </li>
       <li>
         <span class="num"> 15. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> Show HN: I built an open-source data copy tool called ingestr</span>
+        <span class="url">(github.com/piercefreeman)</span>
+        <span class="text">78 points by xusernamex 6 hours ago | hide | 27 comments</span>
       </li>
       <li>
         <span class="num"> 16. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> Dracula's Biggest Mistake</span>
+        <span class="url">(ayjay.com)</span>
+        <span class="text">20 points by xusernamex 2 hours ago | hide | 24 comments</span>
       </li>
       <li>
         <span class="num"> 17. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> Consider the Pawpaw</span>
+        <span class="url">(beltmag.com)</span>
+        <span class="text">55 points by xusernamex 7 hours ago | hide | 48 comments</span>
       </li>
       <li>
         <span class="num"> 18. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> Why time seems to pass faster as we age</span>
+        <span class="url">(invertedpassion.com)</span>
+        <span class="text">215 points by xusernamex 11 hours ago | hide | 138 comments</span>
       </li>
       <li>
         <span class="num"> 19. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> The Second Golden Age of Emacs</span>
+        <span class="url">(bstov.com)</span>
+        <span class="text">78 points by xusernamex 9 hours ago | hide | 39 comments</span>
       </li>
       <li>
         <span class="num"> 20. </span>
-        <span class="title"> Testing the F-35C Tailhook</span>
-        <span class="url">(github.com(supertux))</span>
-        <span class="text">42 points by xusernamex 16 minutes ago | hide | 8 comments</span>
+        <span class="title"> Social Media First Amendment Cases</span>
+        <span class="url">(lawfaremedia.com)</span>
+        <span class="text">55 points by xusernamex 7 hours ago | hide | 140 comments</span>
       </li>
     </ul>
     <script src="index.js"></script>
