--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <span class="num"> 6. </span>
         <span class="title"> Ant Geopolitics</span>
         <span class="url">(aeon.com)</span>
-        <<span class="text">196 points by xusernamex 7 hours ago | hide | 61 comments</span>
+        <span class="text">196 points by xusernamex 7 hours ago | hide | 61 comments</span>
       </li>
       <li>
         <span class="num"> 7. </span>
